--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h1>RUKESH CHITHRA SAHAYARAJAN</h1>
 </header>
 <main>
-    <img id="profile-image" src="P:\profile\img1.jpg" alt="Your Profile Image">
+    <img id="profile-image" src="img1.jpg" alt="Your Profile Image">
     <section id="aboutme">
         <h2>About Me</h2>
         <p>Hey there! I'm Rukesh, a dedicated data science enthusiast with a knack for problem-solving and a passion for extracting insights from data.</p>
